CSS changes. DEO drop down was overlapping with the date box. FIXED.

--- a/dg/media/assets/styles/deoanalytics.css
+++ b/dg/media/assets/styles/deoanalytics.css
@@ -225,3 +225,8 @@
 .h-overflow {
 	overflow:hidden;
 }
+
+#deolist {
+	z-index: 10;
+	position: relative;
+}
